- Added the new option 'priority' to set the priority value in which Monitorix
  will run.
- Added the new option 'image_format' to specify the file format of each
  generated graph. [#132]
- Added name substring match in 'process.pm'. [#136]
- Added the new option 'enable_hourly_view' which enables the ability to select
  the hourly view in the main page.
- Fixed in 'libvirt.pm' limiting to 100 all CPU values greater than 100.
- Fixed in 'libvirt.pm' to hide empty groups.
  	(thanks to Pavel Bauer, pbauer AT algotech.cz for pointing this out)
- Fixed 'serv.pm' to support newer versions of fail2ban.
- Fixed to show the memory usage correctly in 'phpapc.pm'.
- Fixed in 'zfs.pm' to convert FRAG to a numeric value if it's not used in the
  pool. [#138]


3.8.1  - 13-Nov-2015
====================
- Added support in ZFS graph for versions older than 0.6.4.
- Added the new option 'extra_args' in 'ntp.pm' to be able to include extra
  arguments to the command executed by Monitorix.
	(suggested by Matti Pentti, Matti.Pentti AT cimcorp.com)
- Added SMART temperature ID 190 as a fallback option if 194 is missing. [#121]
- Fixed a missing identifier in sprintf(). [#109]
- Fixed a message of 'use of uninitialized value' in 'port.pm'. [#110]
- Fixed the Y-axis title in 'fail2ban.pm'. [#111]
- Fixed to avoid negative values in the network graph of 'process.pm'. [#117]
- Fixed to force a rigid scale in the memory graph.
	(thanks to Lane Russell, lanerussell028 AT gmail.com for pointing this out)
- Fixed the scale of the y-axis in 'du'.
- Fixed a DOM based XSS and a potential DoS vulnerabilities that affected the
  'when' parameter of the 'monitorix.cgi' file.
	(thanks to Dolev Farhi, farhi AT F5.com for pointing this out)
- Small cosmetic changes.


3.8.0  - 16-Sep-2015
====================
- Added a complete graph for the 'du' command.
	(suggested by Julien Flatrès, julien_flatres AT yahoo.fr)
- Added a complete graph for the PageSpeed Module.